--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "framer-motion": "^6.3.11",
-    "next": "12.1.6",
+    "next": "^12.1.6",
     "react": "18.1.0",
     "react-animated-css": "^1.2.1",
     "react-dom": "18.1.0",
